Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-374

Tablet startup should not eagerly open every CFile

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • M4.5
    • None
    • fs, tablet
    • M5

    Description

      Currently when the tablet opens, it opens every cfile and delta block to read their headers. This causes a ton of random IO, such that a 100GB tablet takes about 30 minutes to open when not well buffer-cached due to all the random IO. This is obviously untenable

      Attachments

        Issue Links

          Activity

            People

              adar Adar Dembo
              tlipcon Todd Lipcon
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: